--- a/web/src/css/genshin.less
+++ b/web/src/css/genshin.less
@@ -42,9 +42,11 @@
     padding: 0 0 0 0;
     margin: 0 0 0 0;
   }
+
+  .iconfont {
+    font-family: iconfont, serif;
+  }
 }
-
-
 
 .title-bar {
   background-color: @DARK_BG_COLOR;
@@ -59,7 +61,14 @@
 
   .title {
     color: @GOLD_TEXT_COLOR;
-    font-size: 32px;
+    font-size: 28px;
     .utils.no-warp;
+  }
+
+  .big-icon {
+    font-size: 32px;
+    color: @GOLD_TEXT_COLOR;
+    padding-right: 16px;
+    .utils.iconfont;
   }
 }
