--- a/web/template/zh-cn.html
+++ b/web/template/zh-cn.html
@@ -8,12 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>PowerNukkitX文档</title>
     <link rel="stylesheet"
-          href="https://cdn.bootcdn.net/ajax/libs/mdui/1.0.2/css/mdui.min.css"
+          href="https://cdn.jsdelivr.net/npm/mdui@1.0.2/dist/css/mdui.min.css"
           crossorigin="anonymous"/>
     <!--  Prism.js代码高亮  -->
-    <link href="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/themes/prism.min.css" rel="stylesheet">
-    <link href="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/plugins/line-numbers/prism-line-numbers.min.css" rel="stylesheet">
-    <link href="https://cdn.bootcdn.net/ajax/libs/prism-themes/1.9.0/prism-one-light.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/themes/prism.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/plugins/line-numbers/prism-line-numbers.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/prism-themes@1.9.0/themes/prism-one-light.min.css" rel="stylesheet">
     <!--suppress HtmlUnknownTarget -->
     <link rel="stylesheet" href="%relativePrefix%css/common.css"/>
 </head>
@@ -52,12 +52,12 @@
     </div>
 </div>
 <!-- MDUI Material设计库 -->
-<script src="https://cdn.bootcdn.net/ajax/libs/mdui/1.0.2/js/mdui.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/mdui@1.0.2/dist/js/mdui.min.js" crossorigin="anonymous"></script>
 <!-- Prism.js 代码高亮库 -->
-<script src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/prism.min.js" crossorigin="anonymous"></script>
-<script src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-json.min.js"></script>
-<script src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-javascript.min.js"></script>
-<script src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-java.min.js"></script>
-<script src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/plugins/line-numbers/prism-line-numbers.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/prism.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/components/prism-json.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/components/prism-javascript.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/components/prism-java.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/plugins/line-numbers/prism-line-numbers.min.js"></script>
 </body>
 </html>
