--- a/web/template/zh-cn.html
+++ b/web/template/zh-cn.html
@@ -2,6 +2,10 @@
 <html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
+    <!--suppress HtmlUnknownTarget -->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <!--suppress HtmlUnknownTarget -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no"/>
     <meta name="renderer" content="webkit"/>
     <meta name="force-rendering" content="webkit"/>
