文章目录排序+标题优化

--- a/web/template/zh-cn.html
+++ b/web/template/zh-cn.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <!--suppress HtmlUnknownTarget -->
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
     <!--suppress HtmlUnknownTarget -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no"/>
     <meta name="renderer" content="webkit"/>
     <meta name="force-rendering" content="webkit"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title>PowerNukkitX文档</title>
+    <title>PowerNukkitX文档 - %title%</title>
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/mdui@1.0.2/dist/css/mdui.min.css"
           crossorigin="anonymous"/>
     <!--  Prism.js代码高亮  -->
     <link href="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/themes/prism.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/plugins/line-numbers/prism-line-numbers.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/plugins/line-numbers/prism-line-numbers.min.css"
+          rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/prism-themes@1.9.0/themes/prism-one-light.min.css" rel="stylesheet">
     <!--suppress HtmlUnknownTarget -->
     <link rel="stylesheet" href="%relativePrefix%css/common.css"/>
@@ -32,7 +33,7 @@
                 <span class="icon-title-main">PN</span>
                 <span class="icon-title-sup">X</span>
             </a>
-            <span   class="mdui-typo-title">%title%</span>
+            <span class="mdui-typo-title">%title%</span>
             <div class="mdui-toolbar-spacer"></div>
             <a href="javascript:" class="mdui-btn mdui-btn-icon">
                 <i class="mdui-icon material-icons">search</i>
