--- a/web/template/zh-cn.html
+++ b/web/template/zh-cn.html
@@ -73,6 +73,9 @@
 <script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/components/prism-java.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/plugins/line-numbers/prism-line-numbers.min.js"></script>
 <!-- PNX-文档JS库 -->
-<script src="js/zh-cn.min.js"></script>
+<!--suppress HtmlUnknownTarget -->
+<script src="%relativePrefix%js/zh-cn.min.js"></script>
+<!--suppress HtmlUnknownTarget -->
+<script src="%relativePrefix%js/doc.min.js"></script>
 </body>
 </html>
