--- a/web/template/en-us.html
+++ b/web/template/en-us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html lang="en-us">
 <head>
     <meta charset="UTF-8">
     <!--suppress HtmlUnknownTarget -->
@@ -10,7 +10,7 @@
     <meta name="renderer" content="webkit"/>
     <meta name="force-rendering" content="webkit"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title>PowerNukkitX文档 - %title%</title>
+    <title>PowerNukkitX Doc - %title%</title>
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/mdui@1.0.2/dist/css/mdui.min.css"
           crossorigin="anonymous"/>
@@ -23,9 +23,6 @@
     <link rel="stylesheet" href="%relativePrefix%css/common.css"/>
 </head>
 <body class="mdui-theme-primary-indigo mdui-theme-accent-indigo mdui-drawer-body-left mdui-appbar-with-toolbar">
-<script>
-    window.languageLinks = JSON.parse(`%languageLinks%`)
-</script>
 <header class="appbar mdui-appbar mdui-appbar-fixed">
     <div class="mdui-appbar">
         <div class="mdui-toolbar mdui-color-theme">
@@ -48,7 +45,7 @@
                 <li class="mdui-menu-item">
                     <a href="javascript:switchTheme()" class="mdui-ripple">
                         <i class="mdui-menu-item-icon mdui-icon material-icons">timelapse</i>
-                        切换主题
+                        Theme
                     </a>
                 </li>
             </ul>
@@ -67,7 +64,7 @@
         </nav>
         %md%
         <hr/>
-        <span class="mdui-typo-subheading-opacity mdui-center copyright">© PowerNukkitX 开发组</span>
+        <span class="mdui-typo-subheading-opacity mdui-center copyright">© PowerNukkitX Dev team</span>
         <span class="copyright">&ensp;</span>
     </div>
 </div>
@@ -81,7 +78,7 @@
 <script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/plugins/line-numbers/prism-line-numbers.min.js"></script>
 <!-- PNX-文档JS库 -->
 <!--suppress HtmlUnknownTarget -->
-<script src="%relativePrefix%js/zh-cn.min.js"></script>
+<script src="%relativePrefix%js/en-us.min.js"></script>
 <!--suppress HtmlUnknownTarget -->
 <script src="%relativePrefix%js/doc.min.js"></script>
 </body>
