多语言页面内切换

--- a/web/template/zh-cn.html
+++ b/web/template/zh-cn.html
@@ -24,7 +24,7 @@
 </head>
 <body class="mdui-theme-primary-indigo mdui-theme-accent-indigo mdui-drawer-body-left mdui-appbar-with-toolbar">
 <script>
-    window.languageLinks = JSON.parse(`%languageLinks%`)
+    window.languageLinks = JSON.parse(`%languageFiles%`)
 </script>
 <header class="appbar mdui-appbar mdui-appbar-fixed">
     <div class="mdui-appbar">
@@ -62,7 +62,7 @@
     </div>
     <div class="mdui-container line-numbers">
         <nav class="mdui-row mdui-hidden" id="switch-language-tip-box">
-            <a class="mdui-center fit switch-language-text" id="switch-language-tip-text">There's also an English version.</a>
+            <a class="mdui-center fit switch-language-text" id="switch-language-tip-text"></a>
             <hr/>
         </nav>
         %md%
