优化夜晚模式闪屏

--- a/web/template/en-us.html
+++ b/web/template/en-us.html
@@ -26,6 +26,9 @@
 <script>
     window.languageLinks = JSON.parse(`%languageFiles%`)
 </script>
+<!-- PNX文档JS库 -->
+<!--suppress HtmlUnknownTarget -->
+<script src="%relativePrefix%js/doc.min.js"></script>
 <header class="appbar mdui-appbar mdui-appbar-fixed">
     <div class="mdui-appbar">
         <div class="mdui-toolbar mdui-color-theme">
@@ -82,7 +85,5 @@
 <!-- PNX-文档JS库 -->
 <!--suppress HtmlUnknownTarget -->
 <script src="%relativePrefix%js/en-us.min.js"></script>
-<!--suppress HtmlUnknownTarget -->
-<script src="%relativePrefix%js/doc.min.js"></script>
 </body>
 </html>
