--- a/web/template/zh-cn.html
+++ b/web/template/zh-cn.html
@@ -81,6 +81,8 @@
 <script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/components/prism-json.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/components/prism-javascript.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/components/prism-java.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/components/prism-yaml.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/components/prism-properties.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/plugins/line-numbers/prism-line-numbers.min.js"></script>
 <!-- PNX-文档JS库 -->
 <!--suppress HtmlUnknownTarget -->
