--- a/web/template/index.html
+++ b/web/template/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="PowerNukkitX,Nukkit,PowerNukkit,NK,PN,PNX,Minecraft,Bedrock,mcbe,server">
+    <meta name="description" lang="zh-cn" content="PowerNukkitX是新一代高性能、富特性、完全独立的开源MCBE服务端软件。本站提供PowerNukkitX的使用文档。">
+    <meta name="description" lang="en-us" content="PowerNukkitX is the new generation of high-performance, rich-vanilla-feature and completely independent open source Minecraft:Bedrock Edition server software. This website provides the documents of PowerNukkitX.">
     <!--suppress HtmlUnknownTarget -->
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
     <!--suppress HtmlUnknownTarget -->
@@ -12,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>PowerNukkitX</title>
     <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/mdui@1.0.2/dist/css/mdui.min.css"
+          href="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/css/mdui.min.css"
           crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/common.css"/>
 </head>
@@ -77,7 +80,7 @@
     </div>
 </div>
 <!-- MDUI Material设计库 -->
-<script src="https://cdn.jsdelivr.net/npm/mdui@1.0.2/dist/js/mdui.min.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/js/mdui.min.js" crossorigin="anonymous"></script>
 <!-- PNX主页 JS库 -->
 <script src="js/index.min.js"></script>
 </body>
