--- a/web/template/index.html
+++ b/web/template/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="keywords" content="PowerNukkitX,Nukkit,PowerNukkit,NK,PN,PNX,Minecraft,Bedrock,mcbe,server">
+    <meta name="description" content="PowerNukkitX是新一代高性能、富特性、完全独立的开源MCBE服务端软件。本站提供PowerNukkitX的使用文档。">
     <meta name="description" lang="zh-cn" content="PowerNukkitX是新一代高性能、富特性、完全独立的开源MCBE服务端软件。本站提供PowerNukkitX的使用文档。">
     <meta name="description" lang="en-us" content="PowerNukkitX is the new generation of high-performance, rich-vanilla-feature and completely independent open source Minecraft:Bedrock Edition server software. This website provides the documents of PowerNukkitX.">
     <!--suppress HtmlUnknownTarget -->
