修复语言区分

--- a/web/template/en-us.html
+++ b/web/template/en-us.html
@@ -10,7 +10,7 @@
     <meta name="renderer" content="webkit"/>
     <meta name="force-rendering" content="webkit"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta name="docsearch:language" content="en-us" />
+    <meta name="docsearch:language" content="en" />
     <title>PowerNukkitX Doc - %title%</title>
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/css/mdui.min.css"
@@ -34,6 +34,7 @@
 <!-- PNX文档JS库 -->
 <!--suppress HtmlUnknownTarget -->
 <script src="%relativePrefix%js/doc.min.js"></script>
+<i class="lang-ele">en</i>
 <header class="appbar mdui-appbar mdui-appbar-fixed">
     <div class="mdui-appbar">
         <div class="mdui-toolbar mdui-color-theme">
