--- a/web/template/zh-cn.html
+++ b/web/template/zh-cn.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
+<!--suppress ES6ConvertVarToLetConst -->
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?24a39f1c0a336230e7a5a9cd77288e05";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
+</script>
 <head>
     <meta charset="UTF-8">
     <!--suppress HtmlUnknownTarget -->
