修复目录滑动

--- a/web/template/en-us.html
+++ b/web/template/en-us.html
@@ -75,7 +75,7 @@
     </div>
 </header>
 <div class="mdui-typo">
-    <div id="catalogue-drawer" class="mdui-drawer">
+    <div id="catalogue-drawer" class="mdui-drawer category-super-div">
         <div class="category-v-space"></div>
         %catalogue%
     </div>
