--- a/web/template/en-us.html
+++ b/web/template/en-us.html
@@ -36,7 +36,7 @@
     <!--suppress HtmlUnknownTarget -->
     <link rel="stylesheet" href="%relativePrefix%css/common.css"/>
 </head>
-<body class="mdui-theme-primary-indigo mdui-theme-accent-indigo mdui-drawer-body-left mdui-appbar-with-toolbar">
+<body class="mdui-theme-primary-indigo mdui-theme-accent-indigo mdui-drawer-body-left mdui-appbar-with-toolbar" style="filter: grayscale(100%)">
 <script>
     window.languageLinks = JSON.parse(`%languageFiles%`)
 </script>
