--- a/web/template/en-us.html
+++ b/web/template/en-us.html
@@ -74,7 +74,7 @@
         </div>
     </div>
 </header>
-<div class="mdui-typo">
+<div class="mdui-typo filled-height">
     <div id="catalogue-drawer" class="mdui-drawer category-super-div">
         <div class="category-v-space"></div>
         %catalogue%
