--- a/web/template/index.html
+++ b/web/template/index.html
@@ -30,7 +30,7 @@
           crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/common.css"/>
 </head>
-<body class="mdui-theme-primary-indigo mdui-theme-accent-indigo mdui-drawer-body-left mdui-appbar-with-toolbar" style="filter: grayscale(100%)">
+<body class="mdui-theme-primary-indigo mdui-theme-accent-indigo mdui-drawer-body-left mdui-appbar-with-toolbar">
 <header class="appbar mdui-appbar mdui-appbar-fixed">
     <div class="mdui-appbar">
         <div class="mdui-toolbar mdui-color-theme">
