优化UI - 侧边栏折叠 - CDN换位字节跳动源 - 侧边栏跨页同步

--- a/web/template/css/common.css
+++ b/web/template/css/common.css
@@ -53,6 +53,12 @@
 
 p.category-title {
     font-weight: bold;
+    display: inline;
+}
+
+.category-expander {
+    border-radius: 50%;
+    margin-left: 4px;
 }
 
 ol.category-sub {
