--- a/web/template/en-us.html
+++ b/web/template/en-us.html
@@ -23,7 +23,7 @@
     <meta name="docsearch:language" content="en" />
     <title>PowerNukkitX Doc - %title%</title>
     <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/css/mdui.min.css"
+          href="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/mdui/1.0.2/css/mdui.min.css"
           crossorigin="anonymous"/>
     <!--  DocSearch CSS  -->
     <!--suppress HtmlUnknownTarget -->
@@ -91,15 +91,16 @@
     </div>
 </div>
 <!-- MDUI Material设计库 -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/js/mdui.min.js" crossorigin="anonymous"></script>
+<script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/mdui/1.0.2/js/mdui.min.js" crossorigin="anonymous"></script>
 <!-- Prism.js 代码高亮库 -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/prism.min.js" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/components/prism-json.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/components/prism-javascript.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/components/prism-java.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/components/prism-yaml.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/components/prism-properties.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/plugins/line-numbers/prism-line-numbers.min.js"></script>
+<script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/prism/1.27.0/prism.min.js" crossorigin="anonymous"></script>
+<script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/prism/1.27.0/components/prism-json.min.js"></script>
+<script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/prism/1.27.0/components/prism-json5.min.js"></script>
+<script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/prism/1.27.0/components/prism-javascript.min.js"></script>
+<script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/prism/1.27.0/components/prism-java.min.js"></script>
+<script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/prism/1.27.0/components/prism-yaml.min.js"></script>
+<script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/prism/1.27.0/components/prism-properties.min.js"></script>
+<script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/prism/1.27.0/plugins/line-numbers/prism-line-numbers.min.js"></script>
 <!-- PNX-文档JS库 -->
 <!--suppress HtmlUnknownTarget -->
 <script src="%relativePrefix%js/en-us.min.js"></script>
