--- a/web/template/index.html
+++ b/web/template/index.html
@@ -26,7 +26,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>PowerNukkitX</title>
     <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/css/mdui.min.css"
+          href="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/mdui/1.0.2/css/mdui.min.css"
           crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/common.css"/>
 </head>
@@ -91,7 +91,7 @@
     </div>
 </div>
 <!-- MDUI Material设计库 -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/js/mdui.min.js" crossorigin="anonymous"></script>
+<script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/mdui/1.0.2/js/mdui.min.js" crossorigin="anonymous"></script>
 <!-- PNX主页 JS库 -->
 <script src="js/index.min.js"></script>
 </body>
