修正展开侧边栏时的鼠标样式

--- a/web/template/css/common.css
+++ b/web/template/css/common.css
@@ -59,6 +59,7 @@ p.category-title {
 .category-expander {
     border-radius: 50%;
     margin-left: 4px;
+    cursor: pointer;
 }
 
 ol.category-sub {
