--- a/web/template/zh-cn.html
+++ b/web/template/zh-cn.html
@@ -29,10 +29,10 @@
     <!--suppress HtmlUnknownTarget -->
     <link rel="stylesheet" href="%relativePrefix%css/docsearch.css"/>
     <!--  Prism.js代码高亮  -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/themes/prism.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/plugins/line-numbers/prism-line-numbers.min.css"
+    <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/prism/1.27.0/themes/prism.min.css" rel="stylesheet">
+    <link href="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/prism/1.27.0/plugins/line-numbers/prism-line-numbers.min.css"
           rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism-themes/1.9.0/prism-one-light.min.css" rel="stylesheet">
+    <link href="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/prism-themes/1.9.0/prism-one-light.min.css" rel="stylesheet">
     <!--suppress HtmlUnknownTarget -->
     <link rel="stylesheet" href="%relativePrefix%css/common.css"/>
 </head>
