--- a/web/template/index.html
+++ b/web/template/index.html
@@ -12,7 +12,7 @@
 </script>
 <head>
     <meta charset="UTF-8">
-    <meta name="keywords" content="PowerNukkitX,Nukkit,PowerNukkit,NK,PN,PNX,Minecraft,Bedrock,mcbe,server">
+    <meta name="keywords" content="PowerNukkitX,Nukkit,PowerNukkit,NK,PN,PNX,Minecraft,Bedrock,mcbe,server,文档,Doc,Document">
     <meta name="description" content="PowerNukkitX是新一代高性能、富特性、完全独立的开源MCBE服务端软件。本站提供PowerNukkitX的使用文档。">
     <meta name="description" lang="zh-cn" content="PowerNukkitX是新一代高性能、富特性、完全独立的开源MCBE服务端软件。本站提供PowerNukkitX的使用文档。">
     <meta name="description" lang="en-us" content="PowerNukkitX is the new generation of high-performance, rich-vanilla-feature and completely independent open source Minecraft:Bedrock Edition server software. This website provides the documents of PowerNukkitX.">
@@ -57,6 +57,8 @@
         </div>
     </div>
 </header>
+<div class="mdui-hidden">PowerNukkitX是新一代高性能、富特性、完全独立的开源MCBE服务端软件。本站提供PowerNukkitX的使用文档。</div>
+<div class="mdui-hidden">PowerNukkitX is the new generation of high-performance, rich-vanilla-feature and completely independent open source Minecraft:Bedrock Edition server software. This website provides the documents of PowerNukkitX.</div>
 <div id="catalogue-drawer" class="mdui-drawer">
     <ul class="mdui-list">
         <li class="mdui-subheader" translate="yes">index.doc</li>
